// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse[Base] should render correctly  1`] = `
<div>
  <div
    class="soui-collapse soui-collapse-wrapper"
    style="max-width: 1180px;"
  >
    <div
      class="soui-collapseItem-wrapper"
    >
      <div
        class="soui-collapseItem-header soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="soui-collapseItem-icon soui-collapseItem-active-transform"
          dir="ltr"
          role="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="soui-collapseItem-title"
        >
          This is panel header 1
        </div>
      </div>
      <div
        class="soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none;"
      >
        <div
          class="soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="soui-collapseItem-wrapper soui-collapseItem-active"
    >
      <div
        class="soui-collapseItem-header soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="soui-collapseItem-icon soui-collapseItem-active-transform"
          dir="ltr"
          role="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="soui-collapseItem-title"
        >
          This is panel header 2
        </div>
      </div>
      <div
        class="soui-collapseItem-content soui-collapseItem-expanded"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: block;"
      >
        <div
          class="soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="soui-collapseItem-wrapper soui-collapseItem-disabled"
    >
      <div
        class="soui-collapseItem-header soui-collapseItem-region"
        data-soui-disabled="true"
        tabindex="-1"
      >
        <div
          class="soui-collapseItem-icon soui-collapseItem-active-transform"
          dir="ltr"
          role="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="soui-collapseItem-title"
        >
          This is panel header 3
        </div>
      </div>
      <div
        class="soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none;"
      >
        <div
          class="soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="soui-collapseItem-wrapper soui-collapseItem-active soui-collapseItem-disabled"
    >
      <div
        class="soui-collapseItem-header soui-collapseItem-region"
        data-soui-disabled="true"
        tabindex="-1"
      >
        <div
          class="soui-collapseItem-icon soui-collapseItem-active-transform"
          dir="ltr"
          role="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="soui-collapseItem-title"
        >
          This is panel header 4
        </div>
      </div>
      <div
        class="soui-collapseItem-content soui-collapseItem-expanded"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: block;"
      >
        <div
          class="soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse[Base] should render correctly about accordion 1`] = `
<div>
  <div
    class="soui-collapse soui-collapse-wrapper"
    style="max-width: 1180px;"
  >
    <div
      class="soui-collapseItem-wrapper"
    >
      <div
        class="soui-collapseItem-header soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="soui-collapseItem-icon soui-collapseItem-active-transform"
          dir="ltr"
          role="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="soui-collapseItem-title"
        >
          This is panel header 1
        </div>
      </div>
      <div
        class="soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none;"
      >
        <div
          class="soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="soui-collapseItem-wrapper"
    >
      <div
        class="soui-collapseItem-header soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="soui-collapseItem-icon soui-collapseItem-active-transform"
          dir="ltr"
          role="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="soui-collapseItem-title"
        >
          This is panel header 2
        </div>
      </div>
      <div
        class="soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none;"
      >
        <div
          class="soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="soui-collapseItem-wrapper"
    >
      <div
        class="soui-collapseItem-header soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="soui-collapseItem-icon soui-collapseItem-active-transform"
          dir="ltr"
          role="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="soui-collapseItem-title"
        >
          This is panel header 3
        </div>
      </div>
      <div
        class="soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none;"
      >
        <div
          class="soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="soui-collapseItem-wrapper"
    >
      <div
        class="soui-collapseItem-header soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="soui-collapseItem-icon soui-collapseItem-active-transform"
          dir="ltr"
          role="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="soui-collapseItem-title"
        >
          This is panel header 4
        </div>
      </div>
      <div
        class="soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none;"
      >
        <div
          class="soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse[Base] should render correctly about customize 1`] = `
<div>
  <div
    class="soui-collapse soui-collapse-wrapper"
    style="max-width: 1180px;"
  >
    <div
      class="soui-collapseItem-wrapper"
      style="background: rgb(244, 245, 248);"
    >
      <div
        class="soui-collapseItem-header soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="soui-collapseItem-icon soui-collapseItem-active-transform"
          dir="ltr"
          role="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M10.6957 5.75207L16.2694 11.3386C16.6589 11.7289 16.6589 12.3609 16.2694 12.7512L10.7576 18.2751C10.3675 18.6661 9.73435 18.6668 9.3434 18.2767C9.15675 18.0904 9.05121 17.838 9.04974 17.5744L8.98776 6.46395C8.98467 5.91168 9.42988 5.46147 9.98216 5.45839C10.2497 5.4569 10.5067 5.56268 10.6957 5.75207Z"
              fill="#666C7C"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="soui-collapseItem-title"
        >
          This is panel header 1
        </div>
      </div>
      <div
        class="soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none;"
      >
        <div
          class="soui-collapseItem-content-main"
          style="background: rgb(255, 255, 255);"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="soui-collapseItem-wrapper soui-collapseItem-active"
      style="background: rgb(244, 245, 248);"
    >
      <div
        class="soui-collapseItem-header soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="soui-collapseItem-icon soui-collapseItem-active-transform"
          dir="ltr"
          role="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M10.6957 5.75207L16.2694 11.3386C16.6589 11.7289 16.6589 12.3609 16.2694 12.7512L10.7576 18.2751C10.3675 18.6661 9.73435 18.6668 9.3434 18.2767C9.15675 18.0904 9.05121 17.838 9.04974 17.5744L8.98776 6.46395C8.98467 5.91168 9.42988 5.46147 9.98216 5.45839C10.2497 5.4569 10.5067 5.56268 10.6957 5.75207Z"
              fill="#666C7C"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="soui-collapseItem-title"
        >
          This is panel header 2
        </div>
      </div>
      <div
        class="soui-collapseItem-content soui-collapseItem-expanded"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: block;"
      >
        <div
          class="soui-collapseItem-content-main"
          style="background: rgb(255, 255, 255);"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="soui-collapseItem-wrapper soui-collapseItem-disabled"
      style="background: rgb(244, 245, 248);"
    >
      <div
        class="soui-collapseItem-header soui-collapseItem-region"
        data-soui-disabled="true"
        tabindex="-1"
      >
        <div
          class="soui-collapseItem-icon soui-collapseItem-active-transform"
          dir="ltr"
          role="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M10.6957 5.75207L16.2694 11.3386C16.6589 11.7289 16.6589 12.3609 16.2694 12.7512L10.7576 18.2751C10.3675 18.6661 9.73435 18.6668 9.3434 18.2767C9.15675 18.0904 9.05121 17.838 9.04974 17.5744L8.98776 6.46395C8.98467 5.91168 9.42988 5.46147 9.98216 5.45839C10.2497 5.4569 10.5067 5.56268 10.6957 5.75207Z"
              fill="#666C7C"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="soui-collapseItem-title"
        >
          This is panel header 3
        </div>
      </div>
      <div
        class="soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none;"
      >
        <div
          class="soui-collapseItem-content-main"
          style="background: rgb(255, 255, 255);"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse[Base] should render correctly about extra 1`] = `
<div>
  <div
    class="soui-collapse soui-collapse-wrapper"
    style="max-width: 1180px;"
  >
    <div
      class="soui-collapseItem-wrapper"
    >
      <div
        class="soui-collapseItem-header soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="soui-collapseItem-icon soui-collapseItem-active-transform"
          dir="ltr"
          role="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="soui-collapseItem-title"
        >
          This is panel header 1
        </div>
        <div
          class="soui-collapseItem-extra"
        >
          <svg
            height="16px"
            viewBox="0 0 24 24"
            width="16px"
          >
            <path
              d="M14.002 4C14.002 5.10457 13.1065 6 12.002 6C10.8974 6 10.002 5.10457 10.002 4C10.002 2.89543 10.8974 2 12.002 2C13.1065 2 14.002 2.89543 14.002 4ZM14.0017 12.0903C14.0017 13.1949 13.1063 14.0903 12.0017 14.0903C10.8971 14.0903 10.0017 13.1949 10.0017 12.0903C10.0017 10.9858 10.8971 10.0903 12.0017 10.0903C13.1063 10.0903 14.0017 10.9858 14.0017 12.0903ZM14.0017 20C14.0017 21.1046 13.1063 22 12.0017 22C10.8971 22 10.0017 21.1046 10.0017 20C10.0017 18.8954 10.8971 18 12.0017 18C13.1063 18 14.0017 18.8954 14.0017 20Z"
              fill="#666C7C"
            />
          </svg>
        </div>
      </div>
      <div
        class="soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none;"
      >
        <div
          class="soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="soui-collapseItem-wrapper soui-collapseItem-active"
    >
      <div
        class="soui-collapseItem-header soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="soui-collapseItem-icon soui-collapseItem-active-transform"
          dir="ltr"
          role="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="soui-collapseItem-title"
        >
          This is panel header 2
        </div>
        <div
          class="soui-collapseItem-extra"
        >
          <div
            class="soui-checkbox soui-checkbox-wrapper"
            style="margin: 0px;"
          >
            <input
              style="display: none;"
              tabindex="0"
              type="checkbox"
            />
            <span
              class="soui-checkbox-indicator-wrapper"
            >
              <i
                class="soui-checkbox-indicator"
                data-soui-role="checkbox-indicator"
                tabindex="1"
              />
            </span>
            <span
              class="soui-checkbox-desc"
              data-soui-role="desc"
            >
              checkbox
            </span>
          </div>
        </div>
      </div>
      <div
        class="soui-collapseItem-content soui-collapseItem-expanded"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: block;"
      >
        <div
          class="soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="soui-collapseItem-wrapper"
    >
      <div
        class="soui-collapseItem-header soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="soui-collapseItem-icon soui-collapseItem-active-transform"
          dir="ltr"
          role="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="soui-collapseItem-title"
        >
          This is panel header 3
        </div>
        <div
          class="soui-collapseItem-extra"
        >
          <button
            class="soui-button soui-button-primary soui-button-button soui-button-small"
            dir="ltr"
            type="button"
          >
            <span>
              Button
            </span>
          </button>
        </div>
      </div>
      <div
        class="soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none;"
      >
        <div
          class="soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse[Base] should render correctly about icon 1`] = `
<div>
  <div
    style="display: flex; margin-bottom: 16px; align-items: center;"
  >
    <div
      style="width: 80px;"
    >
      Icon:
    </div>
    <div
      class="soui-radio-group"
    >
      <div
        class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
      >
        <input
          checked=""
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          left
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          right
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          none
        </span>
      </div>
    </div>
  </div>
  <div
    style="display: flex; margin-bottom: 16px; align-items: center;"
  >
    <div
      style="width: 80px;"
    >
      Hotspot:
    </div>
    <div
      class="soui-radio-group"
    >
      <div
        class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
      >
        <input
          checked=""
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          header
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          icon
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          disabled
        </span>
      </div>
    </div>
  </div>
  <div
    class="soui-collapse soui-collapse-wrapper"
    style="max-width: 1180px;"
  >
    <div
      class="soui-collapseItem-wrapper"
    >
      <div
        class="soui-collapseItem-header soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="soui-collapseItem-icon soui-collapseItem-active-transform"
          dir="ltr"
          role="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="soui-collapseItem-title soui-collapseItem-region"
        >
          This is panel header 1
        </div>
      </div>
      <div
        class="soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none;"
      >
        <div
          class="soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="soui-collapseItem-wrapper"
    >
      <div
        class="soui-collapseItem-header soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="soui-collapseItem-icon soui-collapseItem-active-transform"
          dir="ltr"
          role="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="soui-collapseItem-title soui-collapseItem-region"
        >
          This is panel header 2
        </div>
      </div>
      <div
        class="soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none;"
      >
        <div
          class="soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="soui-collapseItem-wrapper"
    >
      <div
        class="soui-collapseItem-header soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="soui-collapseItem-icon soui-collapseItem-active-transform"
          dir="ltr"
          role="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="soui-collapseItem-title soui-collapseItem-region"
        >
          This is panel header 3
        </div>
      </div>
      <div
        class="soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none;"
      >
        <div
          class="soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse[Base] should render correctly about nested panels 1`] = `
<div>
  <div
    class="soui-collapse soui-collapse-wrapper"
    style="max-width: 1180px;"
  >
    <div
      class="soui-collapseItem-wrapper soui-collapseItem-active"
    >
      <div
        class="soui-collapseItem-header soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="soui-collapseItem-icon soui-collapseItem-active-transform"
          dir="ltr"
          role="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="soui-collapseItem-title"
        >
          This is panel header 1
        </div>
      </div>
      <div
        class="soui-collapseItem-content soui-collapseItem-expanded"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: block;"
      >
        <div
          class="soui-collapseItem-content-main"
        >
          <div
            class="soui-collapse soui-collapse-wrapper"
          >
            <div
              class="soui-collapseItem-wrapper soui-collapseItem-active"
            >
              <div
                class="soui-collapseItem-header soui-collapseItem-region"
                data-soui-disabled="false"
                tabindex="0"
              >
                <div
                  class="soui-collapseItem-icon soui-collapseItem-active-transform"
                  dir="ltr"
                  role="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <div
                  class="soui-collapseItem-title"
                >
                  This is panel nest header 2
                </div>
              </div>
              <div
                class="soui-collapseItem-content soui-collapseItem-expanded"
                data-sheinx-animation-duration="fast"
                data-sheinx-animation-type="collapse"
                style="display: block;"
              >
                <div
                  class="soui-collapseItem-content-main"
                >
                  Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
                </div>
              </div>
            </div>
            <div
              class="soui-collapseItem-wrapper"
            >
              <div
                class="soui-collapseItem-header soui-collapseItem-region"
                data-soui-disabled="false"
                tabindex="0"
              >
                <div
                  class="soui-collapseItem-icon soui-collapseItem-active-transform"
                  dir="ltr"
                  role="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <div
                  class="soui-collapseItem-title"
                >
                  This is panel nest header 3
                </div>
              </div>
              <div
                class="soui-collapseItem-content"
                data-sheinx-animation-duration="fast"
                data-sheinx-animation-type="collapse"
                style="display: none;"
              >
                <div
                  class="soui-collapseItem-content-main"
                >
                  Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="soui-collapseItem-wrapper"
    >
      <div
        class="soui-collapseItem-header soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="soui-collapseItem-icon soui-collapseItem-active-transform"
          dir="ltr"
          role="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="soui-collapseItem-title"
        >
          This is panel header 2
        </div>
      </div>
      <div
        class="soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none;"
      >
        <div
          class="soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="soui-collapseItem-wrapper"
    >
      <div
        class="soui-collapseItem-header soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="soui-collapseItem-icon soui-collapseItem-active-transform"
          dir="ltr"
          role="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="soui-collapseItem-title"
        >
          This is panel header 3
        </div>
      </div>
      <div
        class="soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none;"
      >
        <div
          class="soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="soui-collapseItem-wrapper"
    >
      <div
        class="soui-collapseItem-header soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="soui-collapseItem-icon soui-collapseItem-active-transform"
          dir="ltr"
          role="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="soui-collapseItem-title"
        >
          This is panel header 4
        </div>
      </div>
      <div
        class="soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none;"
      >
        <div
          class="soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse[Base] should render correctly about simple panel 1`] = `
<div>
  <div
    class="soui-collapse soui-collapse-wrapper soui-collapse-border-less"
    style="max-width: 1180px;"
  >
    <div
      class="soui-collapseItem-wrapper soui-collapseItem-active soui-collapseItem-border-less"
    >
      <div
        class="soui-collapseItem-header soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="soui-collapseItem-icon soui-collapseItem-active-transform"
          dir="ltr"
          role="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="soui-collapseItem-title"
        >
          This is panel header 1
        </div>
      </div>
      <div
        class="soui-collapseItem-content soui-collapseItem-expanded"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: block;"
      >
        <div
          class="soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="soui-collapseItem-wrapper soui-collapseItem-border-less"
    >
      <div
        class="soui-collapseItem-header soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="soui-collapseItem-icon soui-collapseItem-active-transform"
          dir="ltr"
          role="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="soui-collapseItem-title"
        >
          This is panel header 2
        </div>
      </div>
      <div
        class="soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none;"
      >
        <div
          class="soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="soui-collapseItem-wrapper soui-collapseItem-border-less"
    >
      <div
        class="soui-collapseItem-header soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="soui-collapseItem-icon soui-collapseItem-active-transform"
          dir="ltr"
          role="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="soui-collapseItem-title"
        >
          This is panel header 3
        </div>
      </div>
      <div
        class="soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none;"
      >
        <div
          class="soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
  </div>
</div>
`;
